--- a/src/pages/issues/index.astro
+++ b/src/pages/issues/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../components/Layout.astro';
 import PageFrame from '../../components/PageFrame.astro';
 import IssueCoverCard from '../../components/IssueCoverCard.astro';
 import { getCollection, getEntry } from 'astro:content';
-import { getPostsForIssue } from '../../lib/data';
+import { getPostsForIssue } from '../../lib/contentSource';
 import { coverLinesFromPosts } from '../../lib/lineup';
 
 const issues = (await getCollection('issues'))
@@ -11,10 +11,10 @@ const issues = (await getCollection('issues'))
   .sort((a, b) => new Date(b.data.date).getTime() - new Date(a.data.date).getTime());
 
 const issueCards = await Promise.all(
-  issues.map(async (issue) => {
+  issues.map(async (issue: any) => {
     const publication = await getEntry('publications', issue.data.publicationId);
-    const posts = await getPostsForIssue(issue.data.publicationId, issue.data.issueSlug);
-    return { issue, publication: publication!, coverLines: coverLinesFromPosts(posts, 5) };
+    const posts = (await getPostsForIssue(issue.data.publicationId, issue.data.issueSlug)) as any;
+    return { issue, publication: publication!, coverLines: coverLinesFromPosts(posts as any, 5) };
   })
 );
 
